Fix spacing

--- a/tabs/src/components/WhosNext.scss
+++ b/tabs/src/components/WhosNext.scss
@@ -103,7 +103,7 @@ button {
 }
 
 .add-name > hr {
-  margin: 20pt;
+  margin: 20pt 10pt 10pt 10pt;
 }
 
 .shuffle {
